--- a/doxystrap-extra.css
+++ b/doxystrap-extra.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:500");/*!
+
 h1, .h1, h2, .h2, h3, .h3{
     font-weight: 200 !important;
 }
@@ -155,7 +157,7 @@ div.fragment {
 }
 
 div.line {
-    font-family: Monaco, monospace, fixed;
+    font-family: 'Source Code Pro', monospace, fixed;
     color: #2C3E50;
     font-size: 13px;
     min-height: 13px;
